# accountabilidash

./: .gitignore  docker-compose.override.yml  docker-compose.yml
.github/workflows/: docker-build-push.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_09_2315-9e6d1d8f3bdd_create_users_table.py  2026_02_09_2316-7cc09675d69d_use_timezone_aware_timestamps.py  2026_02_11_0143-46a3ee2fb0d1_create_goals_and_goal_completions_tables.py  2026_02_13_add_strava_columns_to_users.py  2026_02_13_add_strava_goal_fields.py
backend/app/: main.py
backend/app/core/: database.py  deps.py  logging.py  security.py  settings.py
backend/app/middleware/: request_logging.py
backend/app/models/: goals.py  user.py
backend/app/routers/: auth.py  goals.py  health.py  users.py
backend/app/schemas/: __init__.py  goals.py  user.py
backend/app/services/: auth.py  completions.py  goals.py  strava.py  strava_sync.py
backend/tests/: conftest.py  test_routes_auth.py  test_routes_health.py  test_routes_users.py  test_security.py  test_services_auth.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: auth.ts  client.ts  goals.ts  index.ts  users.ts
frontend/src/components/: GoalForm.tsx
frontend/src/contexts/: AuthContext.tsx  auth-context.ts
frontend/src/hooks/: useAuth.ts
helm/accountabilidash/: Chart.yaml  README.md  values.yaml
nginx/: nginx.conf
(+42 files in other folders)
